--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,5 @@ jobs:
         bundler-cache: true
     - name: Linting
       run: bundle exec rubocop
+    - name: Run tests
+      run: bundle exec rspec
