--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,5 @@ jobs:
         run: bundle exec rubocop
       - name: Run tests
         run: bundle exec rspec
+        env:
+          RACK_ENV: test
